--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>20Qs</h2>
+										<h2>Python Analysis</h2>
 										<div class="content">
-											<p>Play the classic 20 questions game</p>
+											<p>Data Analysis projects using Python.</p>
 										</div>
 									</a>
 								</article>
@@ -72,9 +72,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Python Automations</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Webscraping, LinkedIn automations, and more!</p>
 										</div>
 									</a>
 								</article>
@@ -83,9 +83,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>SQL</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Advanced SQL stored procedures for data manipulation.</p>
 										</div>
 									</a>
 								</article>
@@ -94,9 +94,9 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>20Qs</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Can I guess the Taylor Swift song you are thinking of?</p>
 										</div>
 									</a>
 								</article>
