--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,7 +53,7 @@
 							<header>
 								<h1>Welcome to my site,<br />
 								where I plan to host future projects</h1>
-								<p>Here are some of the projects I have completed so far</p>
+								<p>Here are some of the projects I have completed so far:</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
