--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About</a></li>
-							<li><a href="generic.html">Experience/Resume</a></li>
+							<li><a href="experience.html">Experience/Resume</a></li>
 						</ul>
 					</nav>
 
