--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About</a></li>
+							<li><a href="experience.html">About</a></li>
 							<li><a href="experience.html">Experience/Resume</a></li>
 						</ul>
 					</nav>
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Python Analysis</h2>
 										<div class="content">
 											<p>Data Analysis projects using Python.</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Python Automations</h2>
 										<div class="content">
 											<p>Webscraping, LinkedIn automations, and more!</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>SQL</h2>
 										<div class="content">
 											<p>Advanced SQL stored procedures for data manipulation.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>20Qs</h2>
 										<div class="content">
 											<p>Can I guess the Taylor Swift song you are thinking of?</p>
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Aliquam</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -113,7 +113,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Veroeros</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -124,7 +124,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Ipsum</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -135,7 +135,7 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Dolor</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -146,7 +146,7 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Nullam</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -157,7 +157,7 @@
 									<span class="image">
 										<img src="images/pic10.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Ultricies</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -168,7 +168,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Dictum</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -179,7 +179,7 @@
 									<span class="image">
 										<img src="images/pic12.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="experience.html">
 										<h2>Pretium</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
