--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jacob Johnston</title>
+		<title>Jacob Johnston Experience</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
 								</a>
 
 							<!-- Nav -->
@@ -49,13 +49,18 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Experience</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<h2>Data Migrations Engineer</h2>
+							<h2>Data Migrations Engineer (2021-Present)</h2>
 							<p>Starting at Filevine and now continuing with their partner company, Neostella, I work to design, develop, and test ETL procedures in SQL Server and Python to migrate client data from various databases and file systems into customizable data structures. I also set up some robotic process automations using Python. I work with external clients and internal project managers to gather requirements, determine project timelines and pricing structures, and provide technical advice for data transformation decisions and anomalies.</p>
-							<h2>Manager of Healthcare Data Acquisitions</h2>
-							<p>Working at a startup company, I helped to establish processes for collecting data on medical sanctions and then continued to improve on those processes to collect more data more efficiently. I Managed a team of 5 researchers in extracting sanctions data online from 1,100+ regulatory agencies every month and conducted quality checks on each researcher’s work to ensure their processes were accurate and comprehensive. I used Excel and Python for rapid data retrieval, transformation, and load. I used SQL and Power BI to generate productivity reports for management.</p>
-							<h2>Research Lab Manager</h2>
-							<p>I led a team of 8 research assistants in surveying over 3,500 participants and conducting over 1,500 interviews for the 50th anniversary of the Life and Family Legacy longitudinal study. I helped organize and maintain 50 years' worth of legacy data for 6000 participants and would create presentations with participant data visualizations to obtain funding for the project and encourage continued participation in the study.</p>
+							<h2>Manager of Healthcare Data Acquisitions (2019-2021)</h2>
+							<p>Working at a startup company, I helped to establish processes for collecting data on medical sanctions and then continued to improve on those processes to collect more data more efficiently. I managed a team of 5 researchers in extracting online sanctions data from 1,100+ regulatory agencies every month and conducted quality checks on each researcher’s work to ensure their processes were accurate and comprehensive. I used Excel and Python for rapid data retrieval, transformation, and load. I used SQL and Power BI to generate productivity reports for management.</p>
+							<h2>Research Lab Manager (2016-2019)</h2>
+							<p>I led a team of 8 research assistants in surveying over 3,500 participants and conducting over 1,500 interviews for the 50th anniversary of the Life and Family Legacy longitudinal study at Brigham Young University. I helped organize and maintain 50 years' worth of legacy data for 6000 participants and would create presentations with participant data visualizations to obtain funding for the project and encourage continued participation in the study.</p>
+							<h1>Education</h1>
+							<!--<span class="image main"><img src="images/pic13.jpg" alt="" /></span> add image here for upenn and byu -->
+							<h3>Master of Behavioral and Decision Science</h3>
+							<p>I received my Master's degree at the University of Pennsylvania. My training and experience while in school include designing and conducting behavioral experiments, analyzing and interpreting the results, and presenting findings to other academics. I conducted an analysis project using Python to collect, integrate, clean, analyze, and visualize data in order to determine the impact of COVID-19 on the 2020 U.S. Presidential Election. As part of a consulting team, I applied behavioral science insights to create a new, bias-mitigating process for early-stage research and development portfolio selection at CSL Behring, scripting an interactive Excel program to execute the auction-based process.</p>
+							<h3>Bachelor of Science in Psychology</h3>
+							<p> I received my Bachelor's degree at Brigham Young University, with a minor in Sociology. I took part in several experimental design and analysis courses and was a research assistant in two labs - the Life and Family Legacy study and the Behavioral Psychology lab. I was an author on two papers in an undergraduate research journal and a co-presenter at the Mary Lou Fulton Undergraduate Research Conference. As part of the Project Evaluation and Assessment Team internship, I worked with CHOICE Humanitarian to evaluate the efficacy of their programs in rural Nepal. For this internship, I worked with a small team to collect both quantitative and qualitative data from interviews with over 100 local leaders and inhabitants, analyze that data, and present our findings to the board at CHOICE.</p>
 						</div>
 					</div>
 
