--- a/experience.html
+++ b/experience.html
@@ -48,6 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
+							<li><a href="Resume.pdf" download>Resume</a></li>
 							<h1>Experience</h1>
 							<h2>Data Migrations Engineer (2021-Present)</h2>
 							<p>Starting at Filevine and now continuing with their partner company, Neostella, I work to design, develop, and test ETL procedures in SQL Server and Python to migrate client data from various databases and file systems into customizable data structures. I also set up some robotic process automations using Python. I work with external clients and internal project managers to gather requirements, determine project timelines and pricing structures, and provide technical advice for data transformation decisions and anomalies.</p>
@@ -89,10 +90,10 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jacob-johnston-/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/j-johnston1/" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="918-260-0632" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="jacobj1134@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
