--- a/experience.html
+++ b/experience.html
@@ -90,10 +90,10 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/jacob-johnston-/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/j-johnston1/" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="918-260-0632" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="jacobj1134@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jacob-johnston-/" class="icon brands style2 fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/j-johnston1/" class="icon brands style2 fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+								<!--	<li><a href="tel: 918-260-0632" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
+									<li><a href="mailto: jacobj1134@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
