--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="experience.html">
+									<a href="py_analysis.html">
 										<h2>Python Analysis</h2>
 										<div class="content">
 											<p>Data Analysis projects using Python.</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="experience.html">
+									<a href="pyauto.html">
 										<h2>Python Automations</h2>
 										<div class="content">
 											<p>Webscraping, LinkedIn automations, and more!</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="experience.html">
+									<a href="sql.html">
 										<h2>SQL</h2>
 										<div class="content">
 											<p>Advanced SQL stored procedures for data manipulation.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="experience.html">
+									<a href="20q.html">
 										<h2>20Qs</h2>
 										<div class="content">
 											<p>Can I guess the Taylor Swift song you are thinking of?</p>
@@ -102,10 +102,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="experience.html">
-										<h2>Aliquam</h2>
+									<a href="reviews_main.html">
+										<h2>Book Reviews</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Reviews of books I've been reading.</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+							<!--	<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
@@ -185,7 +185,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article>-->
 							</section>
 						</div>
 					</div>
@@ -193,7 +193,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -211,7 +211,7 @@
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
