--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="reviews_main.html">
+									<a href="review_main.html">
 										<h2>Book Reviews</h2>
 										<div class="content">
 											<p>Reviews of books I've been reading.</p>
