--- a/review_main.html
+++ b/review_main.html
@@ -57,7 +57,7 @@
 								</ol>
 							</div>
 							<h2 onclick="toggleRevStruct()">Review Structure</h2>
-							<div class="rev-struct-content" id="struct" style="display:none;"></div>
+							<div class="rev-struct-content" id="struct" style="display:none;">
 								<p>At the time of writing (late 2023) I will be starting with the books I am currently reading and working my way backward to catch up with what I've read in the past few years. In order to move more quickly, I will group all books in a series together for review. This also helps me to provide and overview of the series without spoilers that may pop up by reviewing later books in the series on an individual level. I will begin each review with a brief, 100% spoiler-free summary of my review. This will then be followed by more details on why I assigned the rating I gave and provide a little more details about the book and its themes. I will still try to keep this part spoiler free, but with a large series I may provide minor spoilers when I review specific books in the series. I want to be as up-front about this as possible in case people want to avoid that additional information.</p>
 							</div>
 						</div>
