--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<p>Here are some of the projects I have completed so far:</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+							<!---	<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
@@ -64,15 +64,15 @@
 											<p>Data Analysis projects using Python.</p>
 										</div>
 									</a>
-								</article>
+								</article>-->
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="pyauto.html">
-										<h2>Python Automations</h2>
+										<h2>Python</h2>
 										<div class="content">
-											<p>Webscraping, LinkedIn automations, and more!</p>
+											<p>Data engineering and analysis projects.</p>
 										</div>
 									</a>
 								</article>
@@ -83,7 +83,7 @@
 									<a href="sql.html">
 										<h2>SQL</h2>
 										<div class="content">
-											<p>Advanced SQL stored procedures for data manipulation.</p>
+											<p>Creative solutions to ETL situations.</p>
 										</div>
 									</a>
 								</article>
@@ -109,7 +109,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+							<!--	<article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
@@ -120,7 +120,7 @@
 										</div>
 									</a>
 								</article>
-							<!--	<article class="style2">
+								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
