--- a/index.html
+++ b/index.html
@@ -83,18 +83,7 @@
 									<a href="sql.html">
 										<h2>SQL</h2>
 										<div class="content">
-											<p>Creative solutions to ETL situations.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="20q.html">
-										<h2>20Qs</h2>
-										<div class="content">
-											<p>Can I guess the Taylor Swift song you are thinking of?</p>
+											<p>Creative solutions to ETL obstacles.</p>
 										</div>
 									</a>
 								</article>
@@ -109,6 +98,18 @@
 										</div>
 									</a>
 								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="20q.html">
+										<h2>20Qs</h2>
+										<div class="content">
+											<p>Can I guess the Taylor Swift song you are thinking of?</p>
+										</div>
+									</a>
+								</article>
+								
 							<!--	<article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
