--- a/review_main.html
+++ b/review_main.html
@@ -5,7 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style> .checked {
+			color: orange;
+		  }
+		</style>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -46,7 +51,7 @@
 							<h1>Book Reviews</h1>
 							<p>After reading hundreds of books and making some well-received recommendations, I have decided to begin this review blog as a way to keep family, friends, and anyone else up-to-date on what I have been reading and what I consider worth reading.</p>
 							<h2 onclick="toggleRat()">Rating System</h2>
-							<div class="rating-content" id="rate" style="display:none;">
+							<div class="inner" id="rate" style="display:none;">
 								<p>I am generally a very positive reviewer. I like to assume the approach that everything the author has done was intentional and give them the benefit of the doubt. But I also know I can't simply recommend everything I read so I needed a rating system that clearly defines any caveats I would provide in my recommendation of a book. I use Goodreads to keep track of the books I read, so I settled on a 5-star system to mirror my use of that platform. Ratings definitions are:</p>
 								<ol>
 									<li>I do not think the book has any redeeming qualities. Or if there are any, the negatives outweigh them so much it's not worth reading. Very rarely do I use this.</li>
@@ -57,8 +62,26 @@
 								</ol>
 							</div>
 							<h2 onclick="toggleRevStruct()">Review Structure</h2>
-							<div class="rev-struct-content" id="struct" style="display:none;">
+							<div class="inner" id="struct" style="display:none;">
 								<p>At the time of writing (late 2023) I will be starting with the books I am currently reading and working my way backward to catch up with what I've read in the past few years. In order to move more quickly, I will group all books in a series together for review. This also helps me to provide and overview of the series without spoilers that may pop up by reviewing later books in the series on an individual level. I will begin each review with a brief, 100% spoiler-free summary of my review. This will then be followed by more details on why I assigned the rating I gave and provide a little more details about the book and its themes. I will still try to keep this part spoiler free, but with a large series I may provide minor spoilers when I review specific books in the series. I want to be as up-front about this as possible in case people want to avoid that additional information.</p>
+							</div>
+							<h2 onclick="toggleRevs()">Reviews</h2>
+							<div class="inner" id="revs" style="display:none;">
+								<article class="style5">
+									<span class="image">
+										<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
+									</span>
+									<a href="review_main.html">
+										<h2>Love in the Time of Cholera</h2>
+										<div class="content">
+											<span class="fa fa-star checked"></span>
+											<span class="fa fa-star checked"></span>
+											<span class="fa fa-star checked"></span>
+											<span class="fa fa-star checked"></span>
+											<span class="fa fa-star"></span>
+										</div>
+									</a>
+								</article>
 							</div>
 						</div>
 					</div>
@@ -98,10 +121,16 @@
 					x.style.display = "none";
 				  }
 				}
-			  </script>
-			   <script>
 				function toggleRevStruct() {
 				  var x = document.getElementById("struct");
+				  if (x.style.display === "none") {
+					x.style.display = "block";
+				  } else {
+					x.style.display = "none";
+				  }
+				}
+				function toggleRevs() {
+				  var x = document.getElementById("revs");
 				  if (x.style.display === "none") {
 					x.style.display = "block";
 				  } else {
