--- a/review_main.html
+++ b/review_main.html
@@ -67,9 +67,9 @@
 							</div>
 							<h2 onclick="toggleRevs()">Reviews</h2>
 							<div class="inner" id="revs" style="display:none;">
-								<article class="style5">
+								<article class="loveTimeCholera">
 									<span class="image">
-										<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
+										<img src="images/pic05.jpg"  alt="" />
 									</span>
 									<a href="review_main.html">
 										<h2>Love in the Time of Cholera</h2>
