--- a/review_main.html
+++ b/review_main.html
@@ -68,6 +68,9 @@
 							<h2 onclick="toggleRevs()">Reviews</h2>
 							<div class="inner" id="revs" style="display:none;">
 								<article class="loveTimeCholera">
+									<!--<span class="image">
+										<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
+									</span>-->
 									<a href="review_main.html">
 										<h2>Love in the Time of Cholera</h2>
 										<div class="content">
