--- a/review_main.html
+++ b/review_main.html
@@ -67,21 +67,46 @@
 							</div>
 							<h2 onclick="toggleRevs()">Reviews</h2>
 							<div class="inner" id="revs" style="display:none;">
-								<article class="loveTimeCholera">
-									<span class="image">
-										<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
-									</span>
-									<a href="review_main.html">
-										<h2>Love in the Time of Cholera</h2>
-										<div class="content">
-											<span class="fa fa-star checked"></span>
-											<span class="fa fa-star checked"></span>
-											<span class="fa fa-star checked"></span>
-											<span class="fa fa-star checked"></span>
-											<span class="fa fa-star"></span>
-										</div>
-									</a>
-								</article>
+								<select id="sort-select">
+									<option value="DateReadDesc">Date Read (new->old)</option>
+									<option value="DateReadAsc">Date Read (old->new)</option>
+									<option value="RatingDesc">Rating (high->low)</option>
+									<option value="RatingAsc">Rating (low->high)</option>
+									<option value="AlphabetAsc">Alphabetical (A->Z)</option>
+									<option value="AlphabetDesc">Alphabetical (Z->A)</option>
+								</select>
+								<section class="tiles">
+									<article name="LoveInTheTimeOfCholera" data-rating="4" date="2023-09-30">
+										<span class="image">
+											<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
+										</span>
+										<a href="review_main.html">
+											<h2>Love in the Time of Cholera</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="GodandMankind-ComparativeReligion" data-rating="3" date="2023-09-25">
+										<span class="image">
+											<img src="images/GodMankind-CompRel.jpeg" alt="" />
+										</span>
+										<a href="review_main.html">
+											<h2>God and Mankind: Comparative Religions</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+								</section>
 							</div>
 						</div>
 					</div>
@@ -107,37 +132,12 @@
 			</div>
 
 		<!-- Scripts -->
+			<script src="assets/js/custom.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script>
-				function toggleRat() {
-				  var x = document.getElementById("rate");
-				  if (x.style.display === "none") {
-					x.style.display = "block";
-				  } else {
-					x.style.display = "none";
-				  }
-				}
-				function toggleRevStruct() {
-				  var x = document.getElementById("struct");
-				  if (x.style.display === "none") {
-					x.style.display = "block";
-				  } else {
-					x.style.display = "none";
-				  }
-				}
-				function toggleRevs() {
-				  var x = document.getElementById("revs");
-				  if (x.style.display === "none") {
-					x.style.display = "block";
-				  } else {
-					x.style.display = "none";
-				  }
-				}
-			  </script>
 
 	</body>
 </html>
