--- a/review_main.html
+++ b/review_main.html
@@ -67,14 +67,16 @@
 							</div>
 							<h2 onclick="toggleRevs()">Reviews</h2>
 							<div class="inner" id="revs" style="display:none;">
-								<select id="sort-select">
-									<option value="DateReadDesc">Date Read (new->old)</option>
-									<option value="DateReadAsc">Date Read (old->new)</option>
-									<option value="RatingDesc">Rating (high->low)</option>
-									<option value="RatingAsc">Rating (low->high)</option>
-									<option value="AlphabetAsc">Alphabetical (A->Z)</option>
-									<option value="AlphabetDesc">Alphabetical (Z->A)</option>
-								</select>
+								<section>
+									<select id="sort-select">
+										<option value="DateReadDesc">Date Read (new->old)</option>
+										<option value="DateReadAsc">Date Read (old->new)</option>
+										<option value="RatingDesc">Rating (high->low)</option>
+										<option value="RatingAsc">Rating (low->high)</option>
+										<option value="AlphabetAsc">Alphabetical (A->Z)</option>
+										<option value="AlphabetDesc">Alphabetical (Z->A)</option>
+									</select>
+								</section>
 								<section class="tiles">
 									<article name="LoveInTheTimeOfCholera" data-rating="4" date="2023-09-30">
 										<span class="image">
