trying to get css

--- a/reviews/GodandMankind_ComparativeReligions.html
+++ b/reviews/GodandMankind_ComparativeReligions.html
@@ -4,9 +4,9 @@
 		<title>God and Mankind: Comparative Religions by Robert Oden</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/css/main.css" />
+		<link rel="stylesheet" href="j-johnston1.github.io/assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<noscript><link rel="stylesheet" href="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="j-johnston1.github.io/assets/css/noscript.css" /></noscript>
 		<style> .checked {
 			color: orange;
 		  }
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="https://j-johnston1.github.io/index.html" class="logo">
-									<span class="symbol"><img src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
+									<span class="symbol"><img src="j-johnston1.github.io/images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
 								</a>
 
 							<!-- Nav -->
