Figured it out?

--- a/reviews/GodandMankind_ComparativeReligions.html
+++ b/reviews/GodandMankind_ComparativeReligions.html
@@ -4,9 +4,9 @@
 		<title>God and Mankind: Comparative Religions by Robert Oden</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="j-johnston1.github.io/assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<noscript><link rel="stylesheet" href="j-johnston1.github.io/assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<style> .checked {
 			color: orange;
 		  }
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="https://j-johnston1.github.io/index.html" class="logo">
-									<span class="symbol"><img src="j-johnston1.github.io/images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
+									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Jacob Johnston</span>
 								</a>
 
 							<!-- Nav -->
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/images/GodMankind-CompRel.jpeg" alt="" /></span> 
+							<span class="image main"><img src="../images/GodMankind-CompRel.jpeg" alt="" /></span> 
 							<h1>"God and Mankind: Comparative Religions" by Robert Oden</h1>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
@@ -62,7 +62,7 @@
                                 1. What is religion?<br>
                                 2. Why is it worth studying?<br>
                                 3. How can we study it?<br>
-                                He flies through the first two questions and then spends most of the time discussing several academic approaches to the study of religion (religion as primitive science or an explanation of natural phenomenon vs religion as a social system for building a cohesive society, for example). He also provides a brief comparison of religious themes and how the converge and diverge across the different religious traditions, focusing on stories of cosmogenesis and heroes in the various traditions. The lectures focus heavily on the Judeo-Christian religions with much briefer forays into Hinduism, Buddhism, and Islam. I believe the topic is really to vast to be covered in such a short period of time. The course would serve as a good introduction to individuals looking to begin the study of religion but does not dive into the topic deep enough for those who already have a grounding in religious studies. 
+                                He flies through the first two questions and then spends most of the time discussing several academic approaches to the study of religion (religion as primitive science or an explanation of natural phenomenon vs religion as a social system for building a cohesive society, for example). He also provides a brief comparison of religious themes and how the converge and diverge across the different religious traditions, focusing on stories of cosmogenesis and heroes in the various traditions. The lectures focus heavily on the Judeo-Christian religions with much briefer forays into Hinduism, Buddhism, and Islam. I believe the topic is really too vast to be covered in such a short period of time. The course would serve as a good introduction to individuals looking to begin the study of religion but does not dive into the topic deep enough for those who already have a grounding in religious studies. 
                             </p>
 						</div>
 					</div>
@@ -85,11 +85,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/js/jquery.min.js"></script>
-			<script src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/js/browser.min.js"></script>
-			<script src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/js/breakpoints.min.js"></script>
-			<script src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/js/util.js"></script>
-			<script src="https://github.com/j-johnston1/j-johnston1.github.io/blob/main/assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
