locating LCT jpg

--- a/reviews/LoveintheTimeofCholera.html
+++ b/reviews/LoveintheTimeofCholera.html
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="../images/LoveInTheTimeOfCholera.jpeg" alt="" /></span> 
+							<span class="image main"><img src="../images/LoveInTheTimeOfCholera.jpg" alt="" /></span> 
 							<h1>"Love in the Time of Cholera" by Gabriel García Márquez</h1>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
