--- a/review_main.html
+++ b/review_main.html
@@ -108,6 +108,21 @@
 											</div>
 										</a>
 									</article>
+									<article name="HighFidelity" data-rating="2" date="2023-09-23">
+										<span class="image">
+											<img src="images/HighFidelity.jpg" alt="" />
+										</span>
+										<a href="reviews/HighFidelity.html">
+											<h2>High Fidelity</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 								</section>
 							</div>
 						</div>
